[gd_scene load_steps=10 format=1]

[ext_resource path="res://scene/Player.gd" type="Script" id=1]
[ext_resource path="res://image/star.png" type="Texture" id=2]
[ext_resource path="res://image/player.png" type="Texture" id=3]
[ext_resource path="res://misc/opendyslexic48.fnt" type="BitmapFont" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 38, 43 )

[sub_resource type="ConvexPolygonShape2D" id=2]

custom_solver_bias = 0.0
points = Vector2Array( 23.2514, 16.7823, 21.3002, 31.9001, -50.3879, 31.4124, -51.8509, 15.8068, -49.4121, 3.12738, -45.9984, -13.4536, -17.2256, -26.1331, 6.1828, -29.5468, 24.7144, -19.3057 )

[sub_resource type="ConvexPolygonShape2D" id=3]

custom_solver_bias = 0.0
points = Vector2Array( 23.2514, 16.7823, 24.7144, -19.3057, 29.5912, 0.201328 )

[sub_resource type="Animation" id=4]

length = 2.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ParticlesFinish:config/emitting")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 2.5 ), "transitions":FloatArray( 1, 1 ), "update":1, "values":[ true, false ] }
tracks/1/type = "value"
tracks/1/path = NodePath("LbScore:rect/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 2.5 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( -100, 0 ), Vector2( -100, -250 ) ] }
tracks/2/type = "value"
tracks/2/path = NodePath("LbScore:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0, 0.5, 1.8, 2.5 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":0, "values":[ 0.0, 1.0, 1.0, 0.0 ] }

[sub_resource type="Animation" id=5]

length = 0.2
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.1, 0.2 ), "transitions":FloatArray( 1, 1, 1 ), "update":1, "values":[ 0, 1, 0 ] }

[node name="Player" type="KinematicBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 3 )
shapes/0/trigger = true
shapes/1/shape = SubResource( 2 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 11.7042, -2.92605 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 3 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 11.7042, -2.92605 )
shapes/2/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="ParticlesFinish" type="Particles2D" parent="."]

transform/pos = Vector2( 0, -23.4644 )
config/amount = 64
config/lifetime = 12.0
config/time_scale = 8.0
config/emit_timeout = 8.0
config/emitting = false
config/half_extents = Vector2( 50, 0 )
config/explosiveness = 0.5
config/texture = ExtResource( 2 )
params/direction = 180.0
params/spread = 40.0
params/linear_velocity = 70.0
params/spin_velocity = 1.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 15.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 0.5
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 3 )
hframes = 2

[node name="Collision2" type="CollisionShape2D" parent="."]

visibility/visible = false
transform/pos = Vector2( 0, 3 )
shape = SubResource( 1 )
trigger = true
_update_shape_index = 0

[node name="Collision" type="CollisionPolygon2D" parent="."]

transform/pos = Vector2( 11.7042, -2.92605 )
build_mode = 0
polygon = Vector2Array( -17.2256, -26.1331, 6.1828, -29.5468, 24.7144, -19.3057, 29.5912, 0.201328, 23.2514, 16.7823, 21.3002, 31.9001, -50.3879, 31.4124, -51.8509, 15.8068, -49.4121, 3.12738, -45.9984, -13.4536 )
shape_range = Vector2( 1, 2 )
trigger = false

[node name="Camera2D" type="Camera2D" parent="."]

transform/pos = Vector2( 320, 0 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -1000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 900
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = true
smoothing/speed = 6.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="AnimPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/finish = SubResource( 4 )
anims/idle = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "idle"

[node name="rayGround" type="RayCast2D" parent="."]

transform/pos = Vector2( 0, 8 )
enabled = false
cast_to = Vector2( 0, 50 )
layer_mask = 1
type_mask = 15

[node name="RayLifes" type="Node2D" parent="."]

editor/display_folded = true

[node name="RayRight1" type="RayCast2D" parent="RayLifes"]

transform/pos = Vector2( 0, -20 )
enabled = true
cast_to = Vector2( 50, 0 )
layer_mask = 1
type_mask = 15

[node name="RayRight2" type="RayCast2D" parent="RayLifes"]

transform/pos = Vector2( 0, 20 )
enabled = true
cast_to = Vector2( 50, 0 )
layer_mask = 1
type_mask = 15

[node name="RayLeft1" type="RayCast2D" parent="RayLifes"]

transform/pos = Vector2( 0, -20 )
enabled = true
cast_to = Vector2( -50, 0 )
layer_mask = 1
type_mask = 15

[node name="RayLeft2" type="RayCast2D" parent="RayLifes"]

transform/pos = Vector2( 0, 20 )
enabled = true
cast_to = Vector2( -50, 0 )
layer_mask = 1
type_mask = 15

[node name="RayTop" type="RayCast2D" parent="RayLifes"]

enabled = true
cast_to = Vector2( 0, -50 )
layer_mask = 1
type_mask = 15

[node name="LbScore" type="Label" parent="."]

visibility/opacity = 0.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -100.0
margin/top = -250.0
margin/right = 101.0
margin/bottom = -201.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 0.820312, 0, 1 )
text = "+100"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="finished" from="AnimPlayer" to="." method="_on_AnimPlayer_finished"]


